fix overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,7 @@ strong {
 #header {
   background: $base-color-bg;
   border-bottom: 1px solid #d9dbe8;
+  overflow: hidden;
 
   h1 {
     border-bottom: 1px solid #e5e5e5;
